fix gap for header in detail page

--- a/src/main/webapp/app/job/job-detail/job-detail.component.scss
+++ b/src/main/webapp/app/job/job-detail/job-detail.component.scss
@@ -17,6 +17,7 @@
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 1rem;
+  gap: 1rem;
 }
 
 .job-title {
